// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StartStopButton > renderes isPomodoroActive=false 1`] = `
<button
  onClick={[MockFunction spy]}
>
  Start!
</button>
`;

exports[`StartStopButton > renderes isPomodoroActive=true 1`] = `
<button
  onClick={[MockFunction spy]}
>
  Stop!
</button>
`;
